--- a/CinemaCentro_Refactorizacion/src/VistasCliente/DialogCompra.form
+++ b/CinemaCentro_Refactorizacion/src/VistasCliente/DialogCompra.form
@@ -215,7 +215,7 @@
                       <Component id="jbCVV" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtCVV" min="-2" pref="25" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="9" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
